# docswarm

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
src/docswarm/: __init__.py
